Enhance SEO and user guidance by updating meta tags in index.html, adding robots.txt, and creating sitemap.xml; improve Hero component with additional requirements list.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,36 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>m3uorganizer</title>
+
+    <!-- Primary Meta Tags -->
+    <title>M3U Organizer - Organize and Convert M3U Playlists</title>
+    <meta name="title" content="M3U Organizer - Organize and Convert M3U Playlists" />
+    <meta
+      name="description"
+      content="Free tool to organize, filter, and convert M3U playlists for gaming and multimedia. Easy and fast management for IPTV and RetroArch."
+    />
+    <meta
+      name="keywords"
+      content="m3u, organizer, playlist, iptv, gaming, retroarch, emulation, converter"
+    />
+    <meta name="author" content="Raticuliin" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://m3uorganizer.com/" />
+    <meta property="og:title" content="M3U Organizer - Automated CHD Playlist Generator" />
+    <meta
+      property="og:description"
+      content="Organize your multi-disc .chd games into clean .m3u playlists automatically. Perfect for RetroArch and EmuDeck."
+    />
+    <meta property="og:image" content="https://m3uorganizer.com/favicon.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://m3uorganizer.com/" />
+    <meta property="twitter:title" content="M3U Organizer - Automated CHD Playlist Generator" />
+    <meta
+      property="twitter:description"
+      content="Organize your multi-disc .chd games into clean .m3u playlists automatically. Perfect for RetroArch and EmuDeck."
+    />
+    <meta property="twitter:image" content="https://m3uorganizer.com/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
